# basic-HTTP1.1-Server

./: .gitignore  CMakeLists.txt  README.md  cr_linux.sh  cri_win32.sh  toolchain-windows.cmake
include/: crossDefines.hpp  debug.hpp  fileOpen.hpp  fileProcess.hpp  httpServer.hpp  serverCommands.hpp
src/: fileOpen.cpp  httpServer.cpp  main.cpp  serverCommands.cpp
src/http/: test_bir.html  test_iki.html
